--- a/package.json
+++ b/package.json
@@ -9,14 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
+    "@depay/web3-wallets": "^15.2.4",
+    "@depay/widgets": "^10.2.8",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.13",
+    "@rainbow-me/rainbowkit": "^0.12.1",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.8",
+    "@supabase/supabase-js": "^2.11.0",
+    "@svgr/webpack": "^6.5.1",
+    "@types/crypto-js": "^4.1.1",
+    "@types/lodash.merge": "^4.6.7",
+    "@types/node": "18.15.3",
+    "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.37.0",
-    "eslint-config-next": "13.3.0",
-    "next": "13.3.0",
+    "amazon-asin": "^0.10.13",
+    "amazon-buddy": "^2.2.45",
+    "axios": "^1.3.5",
+    "bootstrap": "^5.2.3",
+    "crypto-js": "^4.1.1",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "ethers": "^5.7.2",
+    "http-proxy-agent": "^5.0.0",
+    "iron-session": "^6.3.1",
+    "lodash.merge": "^4.6.2",
+    "next": "13.2.4",
+    "next-auth": "^4.20.1",
+    "order-id": "^2.1.2",
+    "puppeteer": "^19.8.5",
+    "random-useragent": "^0.5.0",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "resolve-redirects-efficient": "^0.0.8",
+    "sass": "^1.59.3",
+    "siwe": "^2.0.5",
+    "sweetalert2": "^11.7.3",
+    "typescript": "5.0.2",
+    "uuidv4": "^6.2.13",
+    "wagmi": "^0.12.1",
+    "zlib": "^1.0.5"
   }
 }
